--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/repeat"]
 	path = themes/repeat
-	url = https://github.com/nr1etech/hugo-repeat.git
+	url = git@github.com:nr1etech/hugo-repeat.git
