Updating ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 notes.txt
 *.zip
 *.lock
-example/public
+public
 
 # https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
