--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ notes.txt
 *.zip
 *.lock
 public
+resources
 
 # https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
